state/gullfaxi/system/kube-api/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubernetes
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: kubernetes.default.svc.cluster.local
      http:
        paths:
        - pathType: ImplementationSpecific
          backend:
            service:
              name: kubernetes
              port: 
                number: 443
